4단계 - 세션 구현하기 (#305)